# pcl_multi_openni2_recorder

./: .gitignore  CMakeLists.txt  CloudRecord.h  PCDBuffer.h  README.md  Recorder.h  Util.h  main.cpp
src/: CameraIntrinsicsLoader.cpp  CameraIntrinsicsLoader.hpp  Consumer.h  Logger.cpp  Logger.h  PCDBuffer.h  Producer.h  Recorder.h  RecorderNode.h  Timer.h  main.cpp
